test(#47): 게시글 목록 조회 테스트 수정